--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "destiny-rank-calculator",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -23,8 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.ts src/**/*.tsx",
-    "fmt": "prettier --write src/**/*.ts src/**/*.tsx"
+    "fmt": "prettier --write src/**.ts src/**.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.6.0",
     "prettier": "^2.0.5"
   }
 }
