--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fmt": "prettier --write src/**.ts src/**.tsx"
+    "fmt": "prettier --write 'src/**/*.ts' 'src/**/*.tsx'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
     "prettier": "^2.0.5"
   }
 }
